@@ -1,4 +1,4 @@
-# $Header: /data/zender/nco_20150216/nco/configure.ac,v 1.34 2014-02-01 02:52:26 zender Exp $ -*-Shell-script-*-
+# $Header: /data/zender/nco_20150216/nco/configure.ac,v 1.35 2014-02-05 19:33:32 zender Exp $ -*-Shell-script-*-
 
 # Purpose: Template autoconf uses to generate NCO configure script
 # Newer convention names this file configure.ac, rather than configure.in
@@ -782,7 +782,7 @@ if test "x${GCC_OR_GXX}" = 'xyes' ; then
 # 20070310: Change to no-shadow so ncoLexer.cpp compiles
 
     GCC_CMD_ARGS='-std=c99 -pedantic -D_BSD_SOURCE -D_POSIX_SOURCE'
-    GCC_BASE_FLAGS='-Wall -Wunused -W -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -fno-common -g -O4'
+    GCC_BASE_FLAGS='-Wall -Wuninitialized -Wmaybe-uninitialized -Wunused -W -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -fno-common -g -O4'
     GCC_BASE_FLAGS="${GCC_BASE_FLAGS} ${OPENMP_CFLAGS}"
     GCC_CFLAGS="${GCC_BASE_FLAGS} -Wmissing-prototypes"
     GCC_CXXFLAGS="${GCC_BASE_FLAGS}"
@@ -794,14 +794,18 @@ if test "x${GCC_OR_GXX}" = 'xyes' ; then
 # -Werror: Consider warnings as errors
 # -W: Extra warnings, including missing return values, comparison of signed with unsigned
 # -Wall: Warn about common programming problems
-# -Wmissing-prototypes: Warn if missing prototypes (C only, not C++)
-# -Wshadow: Warn if local variable has same name as other local variable
-# -Wpointer-arith: Warn if pointer arithmetic on types without size, e.g., void
-# -Wcast-qual: Warn if const qualifier removed from pointer
 # -Wcast-align: Warn if casting pointer to type of different size
+# -Wcast-qual: Warn if const qualifier removed from pointer
+# -Wmaybe-uninitialized: Warn on uninitialized variables. GCC has many false negatives, clang is better?
+# -Wmissing-prototypes: Warn if missing prototypes (C only, not C++)
+# -Wpointer-arith: Warn if pointer arithmetic on types without size, e.g., void
+# -Wshadow: Warn if local variable has same name as other local variable
+# -Wsometimes-uninitialized: LLVM/clang uses this but GCC does not
+# -Wuninitialized: Warn on uninitialized variables. GCC has many false negatives, clang is better? 
 # -Wwrite-strings: Apply const-qualifier to string constants, die if overwritten
 # -fno-common: Prevent global variables from being simultaneously defined in different files
 # -g: Put debugging symbols in executable
+# -pg: Enable profiling, generate gmon.out output files (also needed by linker)
 # -O4: Turn on optimization so uninitialized variables are flagged
 # Compilation flags recommended by GSL that I do not like and do not use:
 # -ansi: Support only strict ANSI C. Equivalent to -std=c89, conflicts with -std=c99
