@@ -1,3 +1,7 @@
+2014-02-05  Charlie Zender  <zender@uci.edu>
+
+	* Explicitly add -Wuninitialized -Wmaybe-uninitialized to GCC in bld/Makefile
+
 2014-02-04  Charlie Zender  <zender@uci.edu>
 
 	* Pass same Make arguments to clang/LLVM as to gcc/GCC
